--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <span class="px-2 py-0.5 platform-year rounded-full text-xs">2026</span>
                         <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
                     </div>
-                    <span class="absolute top-3 right-3 badge-translation rounded text-xs font-bold z-10">ÇEVİRİ AŞAMASINDA</span>
+                    <span class="absolute top-3 right-3 badge-testing rounded text-xs font-bold z-10">TEST SÜRECİNDE</span>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">L.A. Noire</h3>
                         <p class="text-[#b8a3b8]">1940'lar Los Angeles dedektiflik</p>
