--- a/oyunlar/la-noire.html
+++ b/oyunlar/la-noire.html
@@ -74,7 +74,7 @@
                             <div class="quick-info-card">
                                 <div class="quick-info-icon">🚧</div>
                                 <div class="quick-info-label">Durum</div>
-                                <div class="quick-info-value">Çeviri Aşamasında</div>
+                                <div class="quick-info-value">Test Sürecinde</div>
                             </div>
                         </div>
 
