--- a/index.html
+++ b/index.html
@@ -212,191 +212,177 @@
                 <!-- L.A. Noire -->
                 <a href="oyunlar/la-noire.html" class="game-card" data-year="2026">
                     <img src="images/la-noire.webp" alt="L.A. Noire" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2026</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                    </div>
                     <span class="absolute top-3 right-3 badge-testing rounded text-xs font-bold z-10">TEST SÜRECİNDE</span>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">L.A. Noire</h3>
-                        <p class="text-[#b8a3b8]">1940'lar Los Angeles dedektiflik</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2026</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- Bully -->
                 <a href="oyunlar/bully.html" class="game-card" data-year="2025">
                     <img src="images/bully.webp" alt="Bully" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2025</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                        <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
-                    </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Bully</h3>
-                        <p class="text-[#b8a3b8]">Bullworth Academy okul macerası</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2025</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                            <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- GTA Vice City Nextgen -->
                 <a href="oyunlar/gta-vice-city-nextgen.html" class="game-card" data-year="2025">
                     <img src="images/gta-vice-city-nextgen.webp" alt="Grand Theft Auto Vice City Nextgen" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2025</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                    </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Grand Theft Auto: Vice City Nextgen Edition</h3>
-                        <p class="text-[#b8a3b8]">Modernize edilmiş Vice City</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2025</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- Red Dead Redemption 2 Beta -->
                 <a href="oyunlar/rdr2.html" class="game-card" data-year="2025">
                     <img src="images/rdr2.webp" alt="Red Dead Redemption 2" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2025</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                    </div>
                     <span class="absolute top-3 right-3 badge-beta rounded text-sm font-bold z-10">BETA</span>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Red Dead Redemption II</h3>
-                        <p class="text-[#b8a3b8]">Arthur Morgan'ın epik destanı</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2025</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- Red Dead Redemption PC -->
                 <a href="oyunlar/rdr-pc.html" class="game-card" data-year="2024">
                     <img src="images/rdr-pc.webp" alt="Red Dead Redemption PC" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                    </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Red Dead Redemption</h3>
-                        <p class="text-[#b8a3b8]">John Marston'ın intikam hikayesi</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- Manhunt 2 -->
                 <a href="oyunlar/manhunt-2.html" class="game-card" data-year="2024">
                     <img src="images/manhunt-2.webp" alt="Manhunt 2" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                        <span class="px-2 py-0.5 platform-psp rounded-full text-xs">PSP</span>
-                    </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Manhunt 2</h3>
-                        <p class="text-[#b8a3b8]">Karanlık psikolojik gerilim</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                            <span class="px-2 py-0.5 platform-psp rounded-full text-xs">PSP</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- Manhunt -->
                 <a href="oyunlar/manhunt.html" class="game-card" data-year="2024">
                     <img src="images/manhunt.webp" alt="Manhunt" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                    </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Manhunt</h3>
-                        <p class="text-[#b8a3b8]">Hayatta kalma korku deneyimi</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- Grand Theft Auto V -->
                 <a href="oyunlar/gta-v.html" class="game-card" data-year="2024">
                     <img src="images/gta-v.webp" alt="Grand Theft Auto V" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                    </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Grand Theft Auto V: Legacy & Enhanced</h3>
-                        <p class="text-[#b8a3b8]">Los Santos'ta üç suçlunun hikayesi</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2024</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- Grand Theft Auto Liberty City Stories -->
                 <a href="oyunlar/gta-liberty-city-stories.html" class="game-card" data-year="2023">
                     <img src="images/gta-liberty-city-stories.webp" alt="Grand Theft Auto Liberty City Stories" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2023</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                        <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
-                        <span class="px-2 py-0.5 platform-psp rounded-full text-xs">PSP</span>
-                    </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Grand Theft Auto: Liberty City Stories</h3>
-                        <p class="text-[#b8a3b8]">Toni Cipriani'nin yükselişi</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2023</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                            <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
+                            <span class="px-2 py-0.5 platform-psp rounded-full text-xs">PSP</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- Red Dead Redemption GOTY -->
                 <a href="oyunlar/rdr-goty.html" class="game-card" data-year="2023">
                     <img src="images/rdr-goty.webp" alt="Red Dead Redemption GOTY" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2023</span>
-                        <span class="px-2 py-0.5 platform-emulator rounded-full text-xs">Xenia</span>
-                        <span class="px-2 py-0.5 platform-emulator rounded-full text-xs">Ryujinx</span>
-                    </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Red Dead Redemption GOTY & Undead Nightmare</h3>
-                        <p class="text-[#b8a3b8]">Emülatör için tam paket</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2023</span>
+                            <span class="px-2 py-0.5 platform-emulator rounded-full text-xs">Xenia</span>
+                            <span class="px-2 py-0.5 platform-emulator rounded-full text-xs">Ryujinx</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- Grand Theft Auto Trilogy Definitive -->
                 <a href="oyunlar/gta-trilogy-definitive.html" class="game-card" data-year="2022">
                     <img src="images/gta-trilogy-definitive.webp" alt="Grand Theft Auto Trilogy Definitive" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2022</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                    </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Grand Theft Auto: The Trilogy - Definitive Edition</h3>
-                        <p class="text-[#b8a3b8]">Remastered klasik üçleme</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2022</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- Grand Theft Auto Vice City Stories -->
                 <a href="oyunlar/gta-vice-city-stories.html" class="game-card" data-year="2022">
                     <img src="images/gta-vice-city-stories.webp" alt="Grand Theft Auto Vice City Stories" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2022</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                        <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
-                    </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Grand Theft Auto: Vice City Stories</h3>
-                        <p class="text-[#b8a3b8]">Vic Vance'in Vice City macerası</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2022</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                            <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- Grand Theft Auto Trilogy Classic -->
                 <a href="oyunlar/gta-trilogy-classic.html" class="game-card" data-year="2020">
                     <img src="images/gta-trilogy-classic.webp" alt="Grand Theft Auto Trilogy Classic" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2020</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                        <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
-                    </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">Grand Theft Auto III, Vice City & San Andreas</h3>
-                        <p class="text-[#b8a3b8]">Orijinal klasik üçleme</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2020</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                            <span class="px-2 py-0.5 platform-ps2 rounded-full text-xs">PS2</span>
+                        </div>
                     </div>
                 </a>
 
                 <!-- XIII Classic -->
                 <a href="oyunlar/xiii-classic.html" class="game-card" data-year="2019">
                     <img src="images/xiii-classic.webp" alt="XIII Classic" class="game-card-cover">
-                    <div class="platform-badges">
-                        <span class="px-2 py-0.5 platform-year rounded-full text-xs">2019</span>
-                        <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
-                    </div>
                     <div class="game-card-content">
                         <h3 class="font-semibold text-white">XIII - Classic</h3>
-                        <p class="text-[#b8a3b8]">Çizgi roman tarzı aksiyon</p>
+                        <div class="platform-badges-bottom">
+                            <span class="px-2 py-0.5 platform-year rounded-full text-xs">2019</span>
+                            <span class="px-2 py-0.5 platform-pc rounded-full text-xs">PC</span>
+                        </div>
                     </div>
                 </a>
             </div>
