--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                         <span class="stat-label">Çözüm</span>
                     </div>
                     <div class="stat-item">
-                        <span class="stat-number">7/24</span>
-                        <span class="stat-label">Destek</span>
+                        <span class="stat-number">%100</span>
+                        <span class="stat-label">Ücretsiz</span>
                     </div>
                 </div>
             </div>
