--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="flex flex-wrap justify-center gap-2 mb-6" id="year-filter"></div>
             
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4" id="games-grid">
-                <!-- L.A. Noire -->
+                <!-- L.A. Noire - Şimdilik gizli, sonra yayınlanacak
                 <a href="oyunlar/la-noire.html" class="game-card" data-year="2026">
                     <img src="images/la-noire.webp" alt="L.A. Noire" class="game-card-cover">
                     <span class="absolute top-3 right-3 badge-testing rounded text-xs font-bold z-10">TEST SÜRECİNDE</span>
@@ -221,6 +221,7 @@
                         </div>
                     </div>
                 </a>
+                -->
 
                 <!-- Bully -->
                 <a href="oyunlar/bully.html" class="game-card" data-year="2025">
